P4ADEV-2348 code review